<resources>
    <string name="app_name">vgames</string>
    <string name="app_label">vgames</string>
    <string name="search_hint">Search games</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="tab_top">TOP GAMES</string>
    <string name="tab_genre">GENRE</string>
    <string name="tab_features">FEATURES</string>
    <string name="tab_companies">COMPANIES</string>
    <string name="tab_platforms">PLATFORMS</string>
    <string name="tab_languages">LANGUAGES</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="search_results">Search Results</string>
    <string name="base_url">Base URL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="genre_fetch_error">Error fetching genre list</string>
    <string name="genre_list">Genre List</string>
    <string name="company_list">Game companies</string>
    <string name="company_fetch_error">Error fetching company list</string>
    <string name="feature_list">Game features</string>
    <string name="feature_fetch_error">Error fetching feature list</string>
    <string name="platform_list">Game platforms</string>
    <string name="platform_fetch_error">Error fetching platform list</string>
    <string name="language_list">Game languages</string>
    <string name="language_fetch_error">Error fetching language list</string>
    <string name="no_results_text">No games found to meet search criteria!</string>
    <string name="genre_title">Genre</string>
    <string name="feature_title">Feature</string>
    <string name="company_title">Company</string>
    <string name="platform_title">Platform</string>
    <string name="language_title">Language</string>
    <string name="game_title">Title</string>
    <string name="games_fetch_error">Error fetching game list</string>
    <string name="sotiris">Sotiris Tsakiridis</string>
    <string name="sakis">Sakis Taousanis</string>
    <string name="no_genres">Genre list is empty</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="exit">Exit</string>
    <string name="exit_application">Exit application?</string>
    <string name="cancel_exit">Cancel</string>
    <string name="search">Search</string>
    <string name="description">Description</string>
    <string name="features">Features</string>
    <string name="platforms">Platforms</string>
    <string name="languages">Languages</string>
    <string name="advanced_search">Advanced search</string>
    <string name="visit_webpage">Visit web page</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="no_features">Feature list is empty</string>
    <string name="no_companies">Company list is empty</string>
    <string name="no_platforms">Platform list is empty</string>
    <string name="no_languages">Language list is empty</string>
    <string name="image_gallery">Image gallery</string>
    <string name="search_title">Search Criteria</string>
    <string name="choose_genre">Choose genre</string>
    <string name="choose_company">Choose company</string>
    <string name="choose_feature">Choose feature</string>
    <string name="choose_platform">Choose platoform</string>
    <string name="choose_language">Choose language</string>
    <string name="release_year_from">Release year (from)</string>
    <string name="release_year_to">Release year (to)</string>
    <string name="game_description">Description</string>
    <string name="clear">Clear</string>
    <string name="price_from">Price (from)</string>
    <string name="price_to">Price (from)</string>
    <string name="no_search_criteria">You have not provided any search criteria</string>
    <string name="game_details">Game details</string>
    <string name="game_fetch_error">Game fetch error</string>
    <string name="api_settings">API settings</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="game_list">Game list</string>
    <string name="top_games">Top games</string>
    <string name="top_games_min_rating">Top games minimum rating</string>
    <string name="api_settings_saved">API settings has been saved successfully</string>
    <string name="recent_games">New entries</string>
    <string name="tab_recent">New entries</string>
    <string name="top_games_limit">Number of top games</string>
    <string name="recent_games_limit">Number of recent games</string>


</resources>
