<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/action_bar"
            android:id="@+id/action_bar">
        </include>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable">

            <android.support.design.widget.TabItem
                android:id="@+id/tabTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_top" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_genre" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabFeatures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_features" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabCompanies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_companies" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabPlatforms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_platforms" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabLanguages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_languages" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />



</android.support.design.widget.CoordinatorLayout>